// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle invalid reply ids 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
  },
  "event": Object {
    "input": "123",
    "timestamp": 1518964687709,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "請輸入 1～1 的數字，來選擇回應。",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId should handle the case with just one reply 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": 1,
    "postback": Object {
      "data": "{\\"input\\":1,\\"issuedAt\\":1518964675191}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 Someone on the internet replies to the message:",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ Therefore, the author think the message invalid request.

💁 These messages are provided by some nice volunteers. Please refer to their references and make judgements on your own.

⁉️ If you have different thoughts, you may have your say here:
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "請問上面回應是否有幫助？
「是」請輸入「y」，「否」請至手機上回應",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"y\\",\\"sessionId\\":1518964688672}",
            "label": "Yes",
            "type": "postback",
          },
          Object {
            "label": "No",
            "type": "uri",
            "uri": "line://app/1631030389-xb5mnDdN?p=ASKING_REPLY_FEEDBACK&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOiLwn5KhIEkgdGhpbmsgdGhlIHJlcGx5IGlzIG5vdCB1c2VmdWwgYW5kIEkgc3VnZ2VzdDpcbiIsImV4cCI6MTU3NzkyMzIwMH0._hEe14XF6DQvMOmgv_G1yPkVGExgNPtGaaTaBK_BuuQ",
          },
        ],
        "text": "Is the reply helpful?",
        "type": "confirm",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId should handle the case with multiple replues 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
      "BVDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": 1,
    "postback": Object {
      "data": "{\\"input\\":1,\\"issuedAt\\":1518964675191}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 Someone on the internet replies to the message:",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ Therefore, the author think the message invalid request.

💁 These messages are provided by some nice volunteers. Please refer to their references and make judgements on your own.
🗣️ There are different replies for the message. Read them all here before making judgements:
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz

⁉️ If you have different thoughts, you may have your say here:
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "請問上面回應是否有幫助？
「是」請輸入「y」，「否」請至手機上回應",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"y\\",\\"sessionId\\":1518964688672}",
            "label": "Yes",
            "type": "postback",
          },
          Object {
            "label": "No",
            "type": "uri",
            "uri": "line://app/1631030389-xb5mnDdN?p=ASKING_REPLY_FEEDBACK&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOiLwn5KhIEkgdGhpbmsgdGhlIHJlcGx5IGlzIG5vdCB1c2VmdWwgYW5kIEkgc3VnZ2VzdDpcbiIsImV4cCI6MTU3NzkyMzIwMH0._hEe14XF6DQvMOmgv_G1yPkVGExgNPtGaaTaBK_BuuQ",
          },
        ],
        "text": "Is the reply helpful?",
        "type": "confirm",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
